--- a/404.html
+++ b/404.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="utf-8">
+  <title>LoopBlog</title>
+</head>
+
+<body>
+  <script>
+    window.location.replace("https://loopblog.straumann.com");
+  </script>
+</body>
+
+</html>
